--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.3",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3"
